75ML30D - Day 12 Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![44%](https://progress-bar.dev/44?title=progress&width=100)\n",
+    "![51%](https://progress-bar.dev/51?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1916,9 +1916,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b98ce9d",
+   "metadata": {},
+   "source": [
+    "# 34. \n",
+    "Date: 20th Jan 2024<br>\n",
+    "Medium Leetcode: sum-of-subarray-minimums<br>\n",
+    "Solution: https://leetcode.com/problems/sum-of-subarray-minimums/submissions/1151318247"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6604a9ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def sumSubarrayMins_(self, arr: List[int]) -> int:\n",
+    "        N = len(arr)\n",
+    "        MOD = (10 ** 9) + 7\n",
+    "        result = 0\n",
+    "        for i in range(N):\n",
+    "            minimum = arr[i]\n",
+    "            for j in range(1, N - i + 1):\n",
+    "                minimum = min(minimum, arr[i + j - 1])\n",
+    "                result += minimum\n",
+    "\n",
+    "        return result % MOD\n",
+    "\n",
+    "    def sumSubarrayMins(self, arr: List[int]) -> int:\n",
+    "\n",
+    "        N = len(arr)\n",
+    "        MOD = (10 ** 9) + 7\n",
+    "\n",
+    "        # count of continuous Numbers left, right of arr[i] that are greater than itself\n",
+    "        left = [i for i in range(N)]\n",
+    "        stack = []\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            while len(stack) and stack[-1][1] > arr[i]:\n",
+    "                idx, _ = stack.pop()\n",
+    "                left[idx] = idx - i - 1\n",
+    "            stack.append((i, arr[i]))\n",
+    "\n",
+    "        right = [N - i - 1 for i in range(N)]\n",
+    "        stack = []\n",
+    "        for i in range(N):\n",
+    "            # the '=' sign is needed I think (don't fully understand it) because \n",
+    "            # we need to include the same value only once\n",
+    "            # Without '=' sign on both, we could count it on both left and right\n",
+    "            # With '=' sign on both, we would fail to count it on both left and right\n",
+    "            while len(stack) and stack[-1][1] >= arr[i]: \n",
+    "                idx, _ = stack.pop()\n",
+    "                right[idx] = i - idx - 1\n",
+    "            stack.append((i, arr[i]))\n",
+    "\n",
+    "        result = 0\n",
+    "        for i in range(N):\n",
+    "            result += (left[i] + 1) * (right[i] + 1) * arr[i]\n",
+    "\n",
+    "        return result % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().sumSubarrayMins([3,1,2,4]) == 17\n",
+    "assert Solution().sumSubarrayMins([11,81,94,43,3]) == 444\n",
+    "assert Solution().sumSubarrayMins([71,55,82,55]) == 593"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e804bed5",
+   "metadata": {},
+   "source": [
+    "# 35. \n",
+    "Date: 20th Jan 2024<br>\n",
+    "Medium Leetcode: subsets-ii<br>\n",
+    "Solution: https://leetcode.com/problems/subsets-ii/submissions/1151410592"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f64c3660",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(),\n",
+       " (1,),\n",
+       " (1, 4),\n",
+       " (1, 4, 4),\n",
+       " (1, 4, 4, 4),\n",
+       " (1, 4, 4, 4, 4),\n",
+       " (4,),\n",
+       " (4, 4),\n",
+       " (4, 4, 4),\n",
+       " (4, 4, 4, 4)}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def subsetsWithDup(self, nums: List[int]) -> List[List[int]]:\n",
+    "        result = {tuple()}\n",
+    "        for n in sorted(nums):\n",
+    "            curr = {*result}\n",
+    "            for comb in curr:\n",
+    "                result.add((*comb, n))\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().subsetsWithDup([4,4,4,1,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76691058",
+   "metadata": {},
+   "source": [
+    "# 36. \n",
+    "Date: 20th Jan 2024<br>\n",
+    "Medium Leetcode: combinations<br>\n",
+    "Solution: https://leetcode.com/problems/combinations/submissions/1151420623"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "68358f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def combine(self, n: int, k: int) -> List[List[int]]:\n",
+    "        arr = list(range(1, n + 1))\n",
+    "\n",
+    "        result = []\n",
+    "        def backtrack(arr, curr=[]):\n",
+    "            if len(curr) == k:\n",
+    "                result.append(curr)\n",
+    "            elif arr:\n",
+    "                backtrack(arr[1:], [*curr, arr[0]])\n",
+    "                backtrack(arr[1:], curr)\n",
+    "\n",
+    "        backtrack(arr, [])\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(Solution().combine(4, 2)) == [[1, 2], [1, 3], [1, 4], [2, 3], [2, 4], [3, 4]]\n",
+    "assert sorted(Solution().combine(4, 3)) == [[1, 2, 3], [1, 2, 4], [1, 3, 4], [2, 3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ace8ade",
+   "metadata": {},
+   "source": [
+    "# 37. \n",
+    "Date: 20th Jan 2024<br>\n",
+    "Medium Leetcode: reverse-words-in-a-string<br>\n",
+    "Solution: https://leetcode.com/problems/reverse-words-in-a-string/submissions/1151520485"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "74fdaf1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.words = []\n",
+    "\n",
+    "    def reverseWords_(self, s: str) -> str:\n",
+    "        word = []\n",
+    "        for ch in s + \" \":\n",
+    "            if not ch.isspace():\n",
+    "                word.append(ch)\n",
+    "            elif word:\n",
+    "                self.words.append(\"\".join(word))\n",
+    "                word = []\n",
+    "\n",
+    "        return \" \".join(self.words[::-1])\n",
+    "    \n",
+    "    def reverseWords(self, s: str) -> str:\n",
+    "        \n",
+    "        def reverseWord(s_: List[str], start_: int, end_: int): \n",
+    "            while start_ < end_:\n",
+    "                s_[start_], s_[end_] = s_[end_], s_[start_]\n",
+    "                start_ += 1\n",
+    "                end_ -= 1\n",
+    "\n",
+    "        # O(1) space compelexity solution\n",
+    "        sentence = list(s)\n",
+    "        N = len(s)\n",
+    "\n",
+    "        # Remove white spaces in place\n",
+    "        prev = \" \"\n",
+    "        i = j = 0\n",
+    "        while j < N:\n",
+    "            if sentence[j].isspace() and prev.isspace():\n",
+    "                j += 1\n",
+    "            else:\n",
+    "                sentence[i] = sentence[j]\n",
+    "                prev = sentence[j]\n",
+    "                i += 1\n",
+    "                j += 1\n",
+    "\n",
+    "        i = i if not sentence[i - 1].isspace() else i - 1\n",
+    "        sentence = sentence[:i]\n",
+    "        N = max(i, 0)\n",
+    "\n",
+    "        # Reverse the sentence as a whole\n",
+    "        sentence = sentence[::-1]\n",
+    "\n",
+    "        # Reverse the words in the sentence\n",
+    "        start = 0\n",
+    "        for i in range(N + 1):\n",
+    "            if i == N or sentence[i].isspace():\n",
+    "                reverseWord(sentence, start, i - 1)\n",
+    "                start = i + 1\n",
+    "\n",
+    "        return \"\".join(sentence)\n",
+    "\n",
+    "# Testing the solution\n",
+    "for temp in [\n",
+    "    \"     hello   world   is a     coooool programming    phrase  \",\n",
+    "    \"a asd a b c d\"\n",
+    "]:\n",
+    "    assert Solution().reverseWords(temp) == Solution().reverseWords_(temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "460f4fe2",
+   "metadata": {},
+   "source": [
+    "# 38. \n",
+    "Date: 20th Jan 2024<br>\n",
+    "Medium Leetcode: angle-between-hands-of-a-clock<br>\n",
+    "Solution: https://leetcode.com/problems/angle-between-hands-of-a-clock/submissions/1151539829"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f346595b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def angleClock(self, hour: int, minutes: int) -> float:\n",
+    "        minutes_deg = (minutes / 60) * 360\n",
+    "        hours_deg = ((hour / 12) * 360) + ((minutes / 60) * 30)\n",
+    "        hours_deg %= 360\n",
+    "        diff = abs(hours_deg - minutes_deg)\n",
+    "        return min(diff, 360 - diff)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().angleClock(3, 15) == 7.5\n",
+    "assert Solution().angleClock(12, 59) == 35.5\n",
+    "assert Solution().angleClock(12, 30) == 165"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c835bc64",
+   "id": "65752da8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1926,7 +2198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68358f49",
+   "id": "f9c4fb10",
    "metadata": {},
    "outputs": [],
    "source": []
