--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![51%](https://progress-bar.dev/51?title=progress&width=100)\n",
+    "![56%](https://progress-bar.dev/56?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2188,17 +2188,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37e813cd",
+   "metadata": {},
+   "source": [
+    "# 39. \n",
+    "Date: 21th Jan 2024<br>\n",
+    "Medium Leetcode: house-robber<br>\n",
+    "Solution: https://leetcode.com/problems/house-robber/submissions/1152099761"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "65752da8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def rob_(self, nums: List[int], i: int = 0) -> int:\n",
+    "        'Recursively solve the dp, this will work even if there are -ve values'\n",
+    "        \n",
+    "        @functools.cache\n",
+    "        def backtrack(i: int = 0) -> int:\n",
+    "            if i >= len(nums):\n",
+    "                return 0\n",
+    "\n",
+    "            else:\n",
+    "                return max(\n",
+    "                    nums[i] + backtrack(i + 2),\n",
+    "                    backtrack(i + 1)\n",
+    "                )\n",
+    "            \n",
+    "        return backtrack()\n",
+    "        \n",
+    "    def rob(self, nums: List[int], i: int = 0) -> int:\n",
+    "        'Itertively solve the problem'\n",
+    "        N = len(nums)\n",
+    "        dp = nums + [0, 0]\n",
+    "\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            dp[i] = max(dp[i] + dp[i + 2], dp[i + 1])\n",
+    "\n",
+    "        return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().rob_([1, 2, -100, -50, 100]) == Solution().rob_([1, 2, -100, -50, 100])\n",
+    "assert Solution().rob_([1, 2, -3, -5, 0, 1]) == Solution().rob_([1, 2, -3, -5, 0, 1])\n",
+    "assert Solution().rob_([1, 2, 1]) == Solution().rob_([1, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1038534a",
+   "metadata": {},
+   "source": [
+    "# 40. \n",
+    "Date: 21th Jan 2024<br>\n",
+    "Medium Leetcode: minimum-number-of-pushes-to-type-word-ii<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-number-of-pushes-to-type-word-ii/submissions/1152173013"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "598b2048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minimumPushes(self, word: str) -> int:\n",
+    "        counter = collections.Counter(word)\n",
+    "        n_pushes = dict()\n",
+    "        key_count = 0\n",
+    "        for k, v in counter.most_common():\n",
+    "            n_pushes[k] = (key_count // 8) + 1\n",
+    "            key_count += 1\n",
+    "        \n",
+    "        count = 0\n",
+    "        for k in word:\n",
+    "            count += n_pushes[k]\n",
+    "        return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minimumPushes(\"aabbccddeeffgghhiiiiii\") == 24\n",
+    "assert Solution().minimumPushes(\"xyzxyzxyzxyz\") == 12\n",
+    "assert Solution().minimumPushes(\"abcde\") == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28ec0246",
+   "metadata": {},
+   "source": [
+    "# 41. \n",
+    "Date: 21th Jan 2024<br>\n",
+    "Medium Leetcode: count-the-number-of-houses-at-a-certain-distance-i<br>\n",
+    "Solution: https://leetcode.com/problems/count-the-number-of-houses-at-a-certain-distance-i/submissions/1152316123/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4e3c3bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countOfPairs(self, n: int, x: int, y: int) -> List[int]:\n",
+    "\n",
+    "        # Adjacency list creation\n",
+    "        paths = dict()\n",
+    "        for i in range(1, n):\n",
+    "            paths[i] = {*paths.get(i, set()), i + 1}\n",
+    "            paths[i + 1] = {*paths.get(i + 1, set()), i}\n",
+    "        \n",
+    "        # Adding the shortcut\n",
+    "        if x != y:\n",
+    "            paths[x].add(y)\n",
+    "            paths[y].add(x)\n",
+    "\n",
+    "        result = [0] * n\n",
+    "        for curr in range(1, n + 1):\n",
+    "            visited = {curr}\n",
+    "            to_visit = paths[curr]\n",
+    "            dist = 1\n",
+    "            while to_visit:\n",
+    "                next_to_visit = set()\n",
+    "                for next_ in to_visit:\n",
+    "                    if next_ not in visited:\n",
+    "                        result[dist - 1] += 1\n",
+    "                        next_to_visit = {*next_to_visit, *paths[next_]}\n",
+    "                        visited.add(next_)\n",
+    "                to_visit = next_to_visit\n",
+    "                dist += 1\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countOfPairs(3, 1, 3) == [6, 0, 0]\n",
+    "assert Solution().countOfPairs(5, 2, 4) == [10,8,2,0,0]\n",
+    "assert Solution().countOfPairs(4, 2, 1) == [6,4,2,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b90539",
+   "metadata": {},
+   "source": [
+    "# 42. \n",
+    "Date: 21th Jan 2024<br>\n",
+    "Medium Leetcode: basic-calculator-ii<br>\n",
+    "Solution: https://leetcode.com/problems/basic-calculator-ii/submissions/1152355111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ab846423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def calculate(self, s: str) -> int:\n",
+    "        'DMAS - Division, Multiplication, Addition, Subtraction'\n",
+    "\n",
+    "        # Store the results here\n",
+    "        result = []\n",
+    "\n",
+    "        # Remove whitespaces and aggregate the integers, ops together\n",
+    "        acc = []\n",
+    "        for ch in s + \"$\":\n",
+    "            if ch.isnumeric():\n",
+    "                acc.append(ch)\n",
+    "            elif ch in (\"+\", \"/\", \"*\", \"-\"):\n",
+    "                result.append(int(\"\".join(acc)))\n",
+    "                result.append(ch)\n",
+    "                acc = []\n",
+    "            elif ch == \"$\":\n",
+    "                result.append(int(\"\".join(acc)))\n",
+    "\n",
+    "        # Multiplication / Division first followed by addition / subtraction in LTR order\n",
+    "        for op in [\"*/\", \"+-\"]:\n",
+    "            acc = []\n",
+    "            prev = \"$\" # Some random character\n",
+    "            for ch in result:\n",
+    "                if type(ch) == int:\n",
+    "                    if prev in op:\n",
+    "                        if prev == \"/\":\n",
+    "                            acc.append(acc.pop() // ch)\n",
+    "                        elif prev == \"*\":\n",
+    "                            acc.append(acc.pop() * ch)\n",
+    "                        elif prev == \"+\":\n",
+    "                            acc.append(acc.pop() + ch)\n",
+    "                        else:\n",
+    "                            acc.append(acc.pop() - ch)\n",
+    "                    else:\n",
+    "                        acc.append(ch)\n",
+    "                elif ch not in op:\n",
+    "                    acc.append(ch)\n",
+    "                prev = ch\n",
+    "\n",
+    "            result = acc\n",
+    "\n",
+    "        assert len(result) == 1\n",
+    "        return result[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().calculate(\"1+2*5/3+6/4*2\") == 6\n",
+    "assert Solution().calculate(\"  44/2-2*    3+ 5\") == 21\n",
+    "assert Solution().calculate(\" 4 / 2 / 2\") == 1\n",
+    "assert Solution().calculate(\"3+2*2\") == 7\n",
+    "assert Solution().calculate(\" 3/2 \") == 1\n",
+    "assert Solution().calculate(\" 3+5 / 2 \") == 5\n",
+    "assert Solution().calculate(\"4/2-2*3+5\") == 1\n",
+    "assert Solution().calculate(\"2 - 6 + 5\") == 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c4fb10",
+   "id": "573f717f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2206,7 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3c3bbe",
+   "id": "15e3ebbd",
    "metadata": {},
    "outputs": [],
    "source": []
