--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![56%](https://progress-bar.dev/56?title=progress&width=100)\n",
+    "![57%](https://progress-bar.dev/57?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2407,9 +2407,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "423a725d",
+   "metadata": {},
+   "source": [
+    "# 43. \n",
+    "Date: 22th Jan 2024<br>\n",
+    "Medium Leetcode: 4sum<br>\n",
+    "Solution: https://leetcode.com/problems/4sum/submissions/1153131773"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "573f717f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def fourSum_(self, nums: List[int], target: int) -> List[List[int]]:\n",
+    "        \"Time complexity of O(N^3). It always runs O(N^3) iterations\"\n",
+    "\n",
+    "        N = len(nums)\n",
+    "        result = set()\n",
+    "\n",
+    "        indices = dict()\n",
+    "        for i in range(N):\n",
+    "            index = indices.get(nums[i], set())\n",
+    "            index.add(i)\n",
+    "            indices[nums[i]] = index \n",
+    "\n",
+    "        for i in range(N - 3):\n",
+    "            for j in range(i + 1, N - 2):\n",
+    "                for k in range(j + 1, N - 1):\n",
+    "                    total = nums[i] + nums[j] + nums[k]\n",
+    "                    index = set.difference(indices.get(target - total, set()), {i, j, k})\n",
+    "                    if len(index):\n",
+    "                        l = index.pop()\n",
+    "                        result.add(tuple(sorted((nums[i], nums[j], nums[k], nums[l]))))\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def fourSum(self, nums: List[int], target: int) -> List[List[int]]:\n",
+    "        \"Time compelexity is O(N^3) and runs the entire iteration\"\n",
+    "\n",
+    "        # Sort the array for using the two pointer approach\n",
+    "        nums.sort()\n",
+    "        N = len(nums)\n",
+    "\n",
+    "        result = set()\n",
+    "        for i in range(N - 3):\n",
+    "            for j in range(i + 1, N - 2):\n",
+    "                remaining = target - nums[i] - nums[j]\n",
+    "                start, end = j + 1, N - 1\n",
+    "                while start < end:\n",
+    "                    total = nums[start] + nums[end]\n",
+    "                    if total < remaining:\n",
+    "                        start += 1\n",
+    "                    elif total > remaining:\n",
+    "                        end -= 1\n",
+    "                    else:\n",
+    "                        result.add(tuple(sorted((nums[i], nums[j], nums[start], nums[end]))))\n",
+    "                        start += 1\n",
+    "                        end -= 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(Solution().fourSum([2,2,2,2,2], 8)) == [(2,2,2,2)]\n",
+    "assert sorted(Solution().fourSum([-1,-2,1,0,1,2,3,-3,0,1,2], -6)) == [(-3,-2,-1,0)]\n",
+    "assert sorted(Solution().fourSum([1,2,2,2], 0)) == []\n",
+    "assert sorted(Solution().fourSum([1,2,2,2], 7)) == [(1,2,2,2)]\n",
+    "assert sorted(Solution().fourSum([-3,-1,0,2,4,5], 0)) == [(-3,-1,0,4)]\n",
+    "assert sorted(Solution().fourSum([0,0,0], 0)) == []"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573f717f",
+   "id": "a514e4d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2417,7 +2493,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e3ebbd",
+   "id": "6aa0d70e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82032137",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1be370d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2428,18 +2520,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
   }
  },
  "nbformat": 4,
