75ML30D - Day 15 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![57%](https://progress-bar.dev/57?title=progress&width=100)\n",
+    "![60%](https://progress-bar.dev/60?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2483,20 +2483,92 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a514e4d3",
+   "cell_type": "markdown",
+   "id": "b82e33ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 44. \n",
+    "Date: 23th Jan 2024<br>\n",
+    "Medium Leetcode: maximum-length-of-a-concatenated-string-with-unique-characters<br>\n",
+    "Solution: https://leetcode.com/problems/maximum-length-of-a-concatenated-string-with-unique-characters/submissions/1154144877"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "a514e4d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxLength(self, arr: List[str]) -> int:\n",
+    "\n",
+    "        def backtrack(curr: int, acc: set):\n",
+    "            if len(setArr) == 0 or curr >= N:\n",
+    "                nonlocal maxLen\n",
+    "                maxLen = max(maxLen, len(acc))\n",
+    "            else:\n",
+    "                if not set.intersection(setArr[curr], acc):\n",
+    "                    backtrack(curr + 1, {*acc, *setArr[curr]})\n",
+    "                backtrack(curr + 1, acc)\n",
+    "\n",
+    "        setArr = list(map(set, arr))\n",
+    "        N = len(arr)\n",
+    "        maxLen = -math.inf\n",
+    "\n",
+    "        backtrack(0, set())\n",
+    "        return maxLen\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxLength([\"un\",\"iq\",\"ue\"]) == 4\n",
+    "assert Solution().maxLength([\"cha\",\"r\",\"act\",\"ers\"]) == 6\n",
+    "assert Solution().maxLength([\"abcdefghijklmnopqrstuvwxyz\"]) == 26"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df6866b2",
+   "metadata": {},
+   "source": [
+    "# 45. \n",
+    "Date: 23th Jan 2024<br>\n",
+    "Medium Leetcode: group-the-people-given-the-group-size-they-belong-to<br>\n",
+    "Solution: https://leetcode.com/problems/group-the-people-given-the-group-size-they-belong-to/submissions/1154160920/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "6aa0d70e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def groupThePeople(self, groupSizes: List[int]) -> List[List[int]]:\n",
+    "\n",
+    "        N = len(groupSizes) \n",
+    "        result = []\n",
+    "        store = dict()\n",
+    "        for i in range(N):\n",
+    "            groupSize = groupSizes[i]\n",
+    "            curr = store.get(groupSize, [])\n",
+    "\n",
+    "            curr.append(i)\n",
+    "            if len(curr) == groupSize:\n",
+    "                result.append(curr[:])\n",
+    "                curr = []\n",
+    "\n",
+    "            store[groupSize] = curr\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().groupThePeople([3,3,3,3,3,1,3]) == [[0,1,2],[5],[3,4,6]]\n",
+    "assert Solution().groupThePeople([2,1,3,3,3,2]) == [[1],[2,3,4],[0,5]]\n",
+    "assert Solution().groupThePeople([1,1,1,1,1,1,1]) == [[0],[1],[2],[3],[4],[5],[6]]\n",
+    "assert Solution().groupThePeople([5,5,5,5,5]) == [[0,1,2,3,4]]\n",
+    "assert Solution().groupThePeople([1,2,2,3,3,3,4,4,4,4]) == [[0],[1,2],[3,4,5],[6,7,8,9]]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2520,6 +2592,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
