--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![60%](https://progress-bar.dev/60?title=progress&width=100)\n",
+    "![63%](https://progress-bar.dev/63?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2571,9 +2571,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b4291a7",
+   "metadata": {},
+   "source": [
+    "# 46. \n",
+    "Date: 24th Jan 2024<br>\n",
+    "Medium Leetcode: pseudo-palindromic-paths-in-a-binary-tree<br>\n",
+    "Solution: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "82032137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def pseudoPalindromicPaths (self, root: BinaryTreeNode) -> int: \n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Count the digits that are occuring 1 times. It should 1 or 0.\n",
+    "        11221 - palindrome (21112)\n",
+    "        1122 - palindrome (1221)\n",
+    "\n",
+    "        We can alternatively use an array and keep track of the count of times each digit comes up\n",
+    "        In the end repeat, but bit solution is more memory efficient.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        def backtrack(root: BinaryTreeNode, count: int = 0):\n",
+    "            if not root:\n",
+    "                return 0\n",
+    "            elif not root.left and not root.right:\n",
+    "                count ^= (1 << (root.val - 1)) \n",
+    "                return int(count & (count - 1) == 0)\n",
+    "            else:\n",
+    "                count ^= (1 << (root.val - 1)) \n",
+    "                return backtrack(root.left, count) + backtrack(root.right, count)\n",
+    "\n",
+    "        return backtrack(root)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().pseudoPalindromicPaths(BinaryTreeNode.from_array([2,1,1,1,3,None,None,None,None,None,1])) == 1\n",
+    "assert Solution().pseudoPalindromicPaths(BinaryTreeNode.from_array([2,3,1,3,1,None,1])) == 2\n",
+    "assert Solution().pseudoPalindromicPaths(BinaryTreeNode.from_array([1])) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1341c39c",
+   "metadata": {},
+   "source": [
+    "# 47. \n",
+    "Date: 24th Jan 2024<br>\n",
+    "Medium Leetcode: minimum-time-difference<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-time-difference/submissions/1155129074/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cc1b3e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findMinDifference(self, timePoints: List[str]) -> int:\n",
+    "        def timestamp(s: str) -> int:\n",
+    "            h, m = map(int, s.split(\":\"))\n",
+    "            return (h * 60) + m\n",
+    "            \n",
+    "        ts = sorted(map(timestamp, timePoints))\n",
+    "        N, minDiff = len(ts), math.inf\n",
+    "        for i in range(N):\n",
+    "            diff = ts[i] - ts[i - 1]\n",
+    "            diff = diff if diff >= 0 else 1440 + diff\n",
+    "            minDiff = min(minDiff, diff)\n",
+    "\n",
+    "        return minDiff\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findMinDifference([\"23:59\",\"00:00\"]) == 1\n",
+    "assert Solution().findMinDifference([\"00:00\",\"23:59\",\"00:00\"]) == 0\n",
+    "assert Solution().findMinDifference([\"22:00\",\"22:59\",\"23:05\", \"23:45\", \"00:00\"]) == 6\n",
+    "assert Solution().findMinDifference([\"00:00\", \"01:30\", \"02:00\", \"02:40\", \"03:30\", \"06:00\", \"07:30\", \"15:00\", \"17:20\", \"19:50\", \"22:30\"]) == 30\n",
+    "assert Solution().findMinDifference([\"00:00\", \"23:50\", \"23:10\", \"23:02\", \"22:58\", \"22:01\", \"21:59\"]) == 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82032137",
+   "id": "1be370d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2581,7 +2670,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be370d9",
+   "id": "23ae48a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed10fd04",
    "metadata": {},
    "outputs": [],
    "source": []
