--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![63%](https://progress-bar.dev/63?title=progress&width=100)\n",
+    "![64%](https://progress-bar.dev/64?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2660,12 +2660,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8714c517",
+   "metadata": {},
+   "source": [
+    "# 48. \n",
+    "Date: 24th Jan 2024<br>\n",
+    "Medium Leetcode: difference-between-ones-and-zeros-in-row-and-column<br>\n",
+    "Solution: https://leetcode.com/problems/difference-between-ones-and-zeros-in-row-and-column/submissions/1155587150/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "1be370d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def onesMinusZeros(self, grid: List[List[int]]) -> List[List[int]]:\n",
+    "        N = len(grid) \n",
+    "        M = len(grid[0]) \n",
+    "\n",
+    "        rowC = []\n",
+    "        for i in range(N):\n",
+    "            zeroC = oneC = 0\n",
+    "            for j in range(M):\n",
+    "                if grid[i][j] == 0:\n",
+    "                    zeroC += 1\n",
+    "                else:\n",
+    "                    oneC += 1\n",
+    "            rowC.append(oneC - zeroC)\n",
+    "\n",
+    "        colC = []\n",
+    "        for j in range(M):\n",
+    "            zeroC = oneC = 0\n",
+    "            for i in range(N):\n",
+    "                if grid[i][j] == 0:\n",
+    "                    zeroC += 1\n",
+    "                else:\n",
+    "                    oneC += 1\n",
+    "            colC.append(oneC - zeroC)\n",
+    "    \n",
+    "        for i in range(N):\n",
+    "            for j in range(M):\n",
+    "                grid[i][j] = rowC[i] + colC[j]\n",
+    "\n",
+    "        return grid\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().onesMinusZeros([[0,1,1],[1,0,1],[0,0,1]]) == [[0,0,4],[0,0,4],[-2,-2,2]]\n",
+    "assert Solution().onesMinusZeros([[1,1,1],[1,1,1]]) == [[5,5,5],[5,5,5]]\n",
+    "assert Solution().onesMinusZeros([[1],[0]]) == [[1],[-1]]"
+   ]
   },
   {
    "cell_type": "code",
