--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![64%](https://progress-bar.dev/64?title=progress&width=100)\n",
+    "![68%](https://progress-bar.dev/68?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2715,17 +2715,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fe3b351",
+   "metadata": {},
+   "source": [
+    "# 49. \n",
+    "Date: 25th Jan 2024<br>\n",
+    "Medium Leetcode: count-nodes-equal-to-average-of-subtree<br>\n",
+    "Solution: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "23ae48a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def averageOfSubtree(self, root: BinaryTreeNode) -> int:\n",
+    "\n",
+    "        result = 0\n",
+    "        def backtrack(node: BinaryTreeNode) -> [int, int]:\n",
+    "            nonlocal result\n",
+    "            if not node:\n",
+    "                return 0, 0\n",
+    "            else:\n",
+    "                left = backtrack(node.left)\n",
+    "                right = backtrack(node.right)\n",
+    "                curr = left[0] + right[0] + node.val, left[1] + right[1] + 1\n",
+    "                if curr[0] // curr[1] == node.val:\n",
+    "                    result += 1\n",
+    "                return curr\n",
+    "\n",
+    "        backtrack(root)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().averageOfSubtree(BinaryTreeNode.from_array([4,8,5,0,1,None,6])) == 5\n",
+    "assert Solution().averageOfSubtree(BinaryTreeNode.from_array([1])) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "503ff040",
+   "metadata": {},
+   "source": [
+    "# 50. \n",
+    "Date: 25th Jan 2024<br>\n",
+    "Medium Leetcode: max-increase-to-keep-city-skyline<br>\n",
+    "Solution: https://leetcode.com/problems/max-increase-to-keep-city-skyline/submissions/1156154889"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ed10fd04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxIncreaseKeepingSkyline(self, grid: List[List[int]]) -> int:\n",
+    "        N = len(grid)\n",
+    "\n",
+    "        maxRows = [-math.inf for _ in range(N)]\n",
+    "        maxCols = [-math.inf for _ in range(N)]\n",
+    "\n",
+    "        for i in range(N):\n",
+    "            for j in range(N):\n",
+    "                maxRows[i] = max(maxRows[i], grid[i][j])\n",
+    "                maxCols[j] = max(maxCols[j], grid[i][j])\n",
+    "            \n",
+    "        result = 0\n",
+    "        for i in range(N):\n",
+    "            for j in range(N):\n",
+    "                result += min(maxRows[i], maxCols[j]) - grid[i][j]\n",
+    "            \n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxIncreaseKeepingSkyline([[3,0,8,4],[2,4,5,7],[9,2,6,3],[0,3,1,0]]) == 35\n",
+    "assert Solution().maxIncreaseKeepingSkyline([[0,0,0],[0,0,0],[0,0,0]]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46d024ca",
+   "metadata": {},
+   "source": [
+    "# 51. \n",
+    "Date: 25th Jan 2024<br>\n",
+    "Medium Leetcode: queries-on-number-of-points-inside-a-circle<br>\n",
+    "Solution: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8149808c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def distance(pt1: [int, int], pt2: [int, int]) -> float:\n",
+    "        \"Calculate the eucldiean distance\"\n",
+    "        return math.sqrt(((pt1[0] - pt2[0]) ** 2) + ((pt1[1] - pt2[1]) ** 2))\n",
+    "        \n",
+    "    def countPoints(self, points: List[List[int]], queries: List[List[int]]) -> List[int]:\n",
+    "        \"O(MN) time complexity\"\n",
+    "        result = []\n",
+    "        for x, y, r in queries:\n",
+    "            result.append(sum(1 if Solution.distance((x, y), pt) <= r else 0 for pt in points))\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countPoints([[1,3],[3,3],[5,3],[2,2]], [[2,3,1],[4,3,1],[1,1,2]]) == [3, 2, 2]\n",
+    "assert Solution().countPoints([[1,1],[2,2],[3,3],[4,4],[5,5]], [[1,2,2],[2,2,2],[4,3,2],[4,3,3]]) == [2, 3, 2, 4]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed10fd04",
+   "id": "daacde73",
    "metadata": {},
    "outputs": [],
    "source": []
