75ML30D - Day 18 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![68%](https://progress-bar.dev/68?title=progress&width=100)\n",
+    "![75%](https://progress-bar.dev/75?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -2806,7 +2806,7 @@
     "# 51. \n",
     "Date: 25th Jan 2024<br>\n",
     "Medium Leetcode: queries-on-number-of-points-inside-a-circle<br>\n",
-    "Solution: "
+    "Solution: https://leetcode.com/problems/queries-on-number-of-points-inside-a-circle/submissions/1156168912"
    ]
   },
   {
@@ -2834,9 +2834,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e61313e",
+   "metadata": {},
+   "source": [
+    "# 52. \n",
+    "Date: 26th Jan 2024<br>\n",
+    "Medium Leetcode: out-of-boundary-paths<br>\n",
+    "Solution: https://leetcode.com/problems/out-of-boundary-paths/submissions/1156966732"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "daacde73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findPaths(self, totalRows: int, totalCols: int, maxMove: int, startRow: int, startColumn: int) -> int:\n",
+    "        \n",
+    "        MOD = (10 ** 9) + 7\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def backtrack(x: int, y: int, k: int):\n",
+    "            if x < 0 or x >= totalRows or y < 0 or y >= totalCols:\n",
+    "                return 1\n",
+    "            elif k == 0:\n",
+    "                return 0\n",
+    "            else:\n",
+    "                return (\n",
+    "                    backtrack(x + 1, y, k - 1) + \n",
+    "                    backtrack(x, y + 1, k - 1) + \n",
+    "                    backtrack(x - 1, y, k - 1) + \n",
+    "                    backtrack(x, y - 1, k - 1)\n",
+    "                )\n",
+    "\n",
+    "        def iterate(x: int, y: int, k: int) -> int:\n",
+    "            'Too slow and would consume a lot of memory'\n",
+    "\n",
+    "            result = 0\n",
+    "            to_visit = [(x, y)]\n",
+    "            while k >= 0:\n",
+    "                next_to_visit = []\n",
+    "                for i, j in to_visit:\n",
+    "                    if i < 0 or i >= totalRows or j < 0 or j >= totalCols:\n",
+    "                        result += 1\n",
+    "                    else:\n",
+    "                        next_to_visit.append((i + 1, j))\n",
+    "                        next_to_visit.append((i, j + 1))\n",
+    "                        next_to_visit.append((i - 1, j))\n",
+    "                        next_to_visit.append((i, j - 1))\n",
+    "                k -= 1\n",
+    "                to_visit = next_to_visit\n",
+    "\n",
+    "            return result\n",
+    "\n",
+    "        return backtrack(startRow, startColumn, maxMove) % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findPaths(2, 2, 2, 0, 0) == 6\n",
+    "assert Solution().findPaths(2, 2, 4, 0, 0) == 30\n",
+    "assert Solution().findPaths(1, 3, 3, 0, 1) == 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da7aece",
+   "metadata": {},
+   "source": [
+    "# 53. \n",
+    "Date: 26th Jan 2024<br>\n",
+    "Medium Leetcode: gray-code<br>\n",
+    "Solution: https://leetcode.com/problems/gray-code/submissions/1157073490/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "4f342db0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def grayCode(self, n: int) -> List[int]:\n",
+    "        nums = list(range(0, 2 ** n))\n",
+    "\n",
+    "        def backtrack(nums) -> list[int]:\n",
+    "            n = len(nums)\n",
+    "            if n == 2:\n",
+    "                return nums\n",
+    "            else:\n",
+    "                mid = n // 2\n",
+    "                return backtrack(nums[:mid]) + backtrack(nums[mid:])[::-1]\n",
+    "\n",
+    "        return backtrack(nums)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().grayCode(1) == [0, 1]\n",
+    "assert Solution().grayCode(2) == [0, 1, 3, 2]\n",
+    "assert Solution().grayCode(3) == [0, 1, 3, 2, 6, 7, 5, 4]\n",
+    "assert Solution().grayCode(4) == [0, 1, 3, 2, 6, 7, 5, 4, 12, 13, 15, 14, 10, 11, 9, 8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "441520c2",
+   "metadata": {},
+   "source": [
+    "# 54. \n",
+    "Date: 26th Jan 2024<br>\n",
+    "Medium Leetcode: restore-ip-addresses<br>\n",
+    "Solution: https://leetcode.com/problems/restore-ip-addresses/submissions/1157138443/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "86d949a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def restoreIpAddresses(self, s: str) -> List[str]:\n",
+    "        def validateIntString(subStr: str):\n",
+    "            subInt = int(subStr)\n",
+    "            return 0 <= subInt <= 255 and len(str(subInt)) == len(subStr)\n",
+    "\n",
+    "        result = []\n",
+    "        def backtrack(s, ip: list[str] = []):\n",
+    "\n",
+    "            if len(ip) == 4 and not s:\n",
+    "                result.append(\".\".join(ip))\n",
+    "\n",
+    "            elif not s:\n",
+    "                return\n",
+    "                \n",
+    "            else:\n",
+    "\n",
+    "                # Try adding current digit to prev octet, see if the octet still remains valid\n",
+    "                prevPlus = ip[-1] + s[0] if len(ip) else None\n",
+    "                if prevPlus:\n",
+    "                    if validateIntString(prevPlus):\n",
+    "                        backtrack(s[1:], [*ip[:-1], prevPlus])\n",
+    "\n",
+    "                    # We cannot add anything to the last octet and there are way too many digits forward as well\n",
+    "                    elif len(s) > 3 * (4 - len(ip)): \n",
+    "                        return\n",
+    "\n",
+    "                # Insert the current digit as a seperate octet\n",
+    "                backtrack(s[1:], [*ip, s[0]])\n",
+    "            \n",
+    "        backtrack(s)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(Solution().restoreIpAddresses(\"25525511135\")) == sorted(['255.255.111.35', '255.255.11.135'])\n",
+    "assert sorted(Solution().restoreIpAddresses(\"0000\")) == sorted([\"0.0.0.0\"])\n",
+    "assert sorted(Solution().restoreIpAddresses(\"101023\")) == sorted([\"1.0.10.23\",\"1.0.102.3\",\"10.1.0.23\",\"10.10.2.3\",\"101.0.2.3\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98b0579c",
+   "metadata": {},
+   "source": [
+    "# 55. \n",
+    "Date: 26th Jan 2024<br>\n",
+    "Medium Leetcode: binary-tree-level-order-traversal<br>\n",
+    "Solution: https://leetcode.com/problems/binary-tree-level-order-traversal/submissions/1157158335/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6f6fb7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def levelOrder(self, root: BinaryTreeNode) -> List[List[int]]:\n",
+    "\n",
+    "        result = [[root]] if root else [[]]\n",
+    "\n",
+    "        # Iterate until result[-1] == []\n",
+    "        while result[-1]:\n",
+    "            curr = result[-1]\n",
+    "            next_ = []\n",
+    "            for node in curr:\n",
+    "                if node.left:\n",
+    "                    next_.append(node.left)\n",
+    "                if node.right:\n",
+    "                    next_.append(node.right)\n",
+    "\n",
+    "            # Prev would no longer be needed, we can convert them to their respective values\n",
+    "            result[-1] = list(map(lambda x: x.val, curr))\n",
+    "            \n",
+    "            # Insert the next_ to iterate. Note that next_ would be [] when we have hit the max height\n",
+    "            result.append(next_)\n",
+    "\n",
+    "        # Strip off the last []\n",
+    "        return result[:-1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().levelOrder(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [[3],[9,20],[15,7]]\n",
+    "assert Solution().levelOrder(BinaryTreeNode.from_array([1])) == [[1]]\n",
+    "assert Solution().levelOrder(BinaryTreeNode.from_array([])) == []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c469de",
+   "metadata": {},
+   "source": [
+    "# 56. \n",
+    "Date: 26th Jan 2024<br>\n",
+    "Medium Leetcode: rotate-list<br>\n",
+    "Solution: https://leetcode.com/problems/rotate-list/submissions/1157179417/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f0405dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rotateRight(self, head: ListNode, k: int) -> ListNode:\n",
+    "        # Find the length of linked list\n",
+    "        n, curr = 0, head\n",
+    "        while curr:\n",
+    "            n += 1\n",
+    "            curr = curr.next\n",
+    "\n",
+    "        # Simplify the rotations\n",
+    "        k = k % n if n > 0 else 0\n",
+    "\n",
+    "        # Edge case\n",
+    "        if n <= 1 or k == 0:\n",
+    "            return head\n",
+    "\n",
+    "        # Find the last node in the rotated array\n",
+    "        curr = head\n",
+    "        for _ in range(n - k - 1):\n",
+    "            curr = curr.next\n",
+    "\n",
+    "        # Point the last node to Null, this node would become our new head\n",
+    "        temp = curr.next\n",
+    "        curr.next = None\n",
+    "\n",
+    "        curr = temp\n",
+    "        while curr.next:\n",
+    "            curr = curr.next\n",
+    "\n",
+    "        curr.next = head\n",
+    "\n",
+    "        return temp\n",
+    "\n",
+    "# Testing the solution    \n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1]), 99).to_list() == [1, 0]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1]), 100).to_list() == [0, 1]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1,2]), 0).to_list() == [0, 1, 2]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1,2]), 1).to_list() == [2, 0, 1]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1,2]), 2).to_list() == [1, 2, 0]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1,2]), 3).to_list() == [0, 1, 2]\n",
+    "assert Solution().rotateRight(ListNode.to_singly_linked_list([0,1,2,3]), 4).to_list() == [0, 1, 2, 3]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daacde73",
+   "id": "ec9ae08d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536300c6",
    "metadata": {},
    "outputs": [],
    "source": []
