75ML30D - Day 23 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![84%](https://progress-bar.dev/84?title=progress&width=100)\n",
+    "![89%](https://progress-bar.dev/89?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -5491,19 +5491,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe4ffe11",
+   "metadata": {},
+   "source": [
+    "# 64. \n",
+    "Date: 29th Jan 2024<br>\n",
+    "Medium Leetcode: count-nice-pairs-in-an-array<br>\n",
+    "Solution: https://leetcode.com/problems/count-nice-pairs-in-an-array/submissions/1159662048"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "332793be",
    "metadata": {
-    "papermill": {
-     "duration": 0.023142,
-     "end_time": "2024-01-28T15:13:52.598137",
-     "exception": false,
-     "start_time": "2024-01-28T15:13:52.574995",
-     "status": "completed"
-    },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rev(n: int) -> int:\n",
+    "        return int(str(n)[::-1])\n",
+    "\n",
+    "    def generatePairs(diff: int, end: int = 10e3):\n",
+    "        result = []\n",
+    "        for n in range(1, int(end)):\n",
+    "            if n - Solution.rev(n) == diff:\n",
+    "                result.append(n)\n",
+    "        return result\n",
+    "\n",
+    "    def countNicePairs(self, nums: List[int]) -> int:\n",
+    "        hm: dict[int, list[int]] = {}\n",
+    "        for n in nums:\n",
+    "            diff = n - Solution.rev(n)\n",
+    "            curr = hm.get(diff, [])\n",
+    "            curr.append(n)\n",
+    "            hm[diff] = curr\n",
+    "\n",
+    "        return sum(map(lambda x: math.comb(len(x), 2), hm.values()))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countNicePairs([42, 11, 1, 97]) == 2\n",
+    "assert Solution().countNicePairs([13,10,35,24,76]) == 4\n",
+    "assert Solution().countNicePairs([13, 35, 24, 46, 57]) == 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e9ec2a",
+   "metadata": {},
+   "source": [
+    "# 65. \n",
+    "Date: 29th Jan 2024<br>\n",
+    "Medium Leetcode: diagonal-traverse-ii<br>\n",
+    "Solution: https://leetcode.com/problems/diagonal-traverse-ii/submissions/1159672680"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e51dcb6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 1), (2, 0), (3, 0), (3, 1), (3, 2), (4, 0), (4, 1), (4, 2), (4, 3), (4, 4)]\n",
+      "[(0, 0), (1, 0), (0, 1), (2, 0), (1, 1), (0, 2), (3, 0), (0, 3), (4, 0), (3, 1), (0, 4), (4, 1), (3, 2), (4, 2), (4, 3), (4, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findDiagonalOrder(self, nums: List[List[int]]) -> List[int]:\n",
+    "        indices = []\n",
+    "        for i in range(len(nums)):\n",
+    "            row = nums[i]\n",
+    "            for j in range(len(row)):\n",
+    "                indices.append((i, j))\n",
+    "\n",
+    "        print (indices)\n",
+    "        indices.sort(key=lambda x: (x[0] + x[1], -x[0]))\n",
+    "        print (indices)\n",
+    "\n",
+    "        result = []\n",
+    "        for i, j in indices:\n",
+    "            result.append(nums[i][j])\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findDiagonalOrder([[1,2,3,4,5],[6,7],[8],[9,10,11],[12,13,14,15,16]]) == [1,6,2,8,7,3,9,4,12,10,5,13,11,14,15,16]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "723503a7",
+   "metadata": {},
+   "source": [
+    "# 66. \n",
+    "Date: 31st Jan 2024<br>\n",
+    "Medium Leetcode: daily-temperatures<br>\n",
+    "Solution: https://leetcode.com/problems/daily-temperatures/submissions/1161606488/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "b2f9aee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def dailyTemperatures(self, temperatures: List[int]) -> List[int]: \n",
+    "        stack = [] \n",
+    "        result = []\n",
+    "        N = len(temperatures)\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            curr = temperatures[i]\n",
+    "            while stack and curr >= stack[-1][1]:\n",
+    "                stack.pop()\n",
+    "\n",
+    "            result.append(stack[-1][0] - i if stack else 0)\n",
+    "            stack.append((i, curr))\n",
+    "\n",
+    "        result = result[::-1]\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().dailyTemperatures([73, 74, 75, 71, 69, 72, 76, 73]) == [1, 1, 4, 2, 1, 1, 0, 0]\n",
+    "assert Solution().dailyTemperatures([30, 40, 50, 60]) == [1, 1, 1, 0]\n",
+    "assert Solution().dailyTemperatures([30, 60, 90]) == [1, 1, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f7defd",
+   "metadata": {},
+   "source": [
+    "# 67. \n",
+    "Date: 31st Jan 2024<br>\n",
+    "Medium Leetcode: evaluate-reverse-polish-notation<br>\n",
+    "Solution: https://leetcode.com/problems/evaluate-reverse-polish-notation/submissions/1161618394"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "2a289297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def evalRPN(self, tokens: List[str]) -> int:\n",
+    "        stack = []\n",
+    "        for ch in tokens:\n",
+    "\n",
+    "            if ch not in (\"+\", \"-\", \"*\", \"/\"):\n",
+    "                stack.append(ch)\n",
+    "\n",
+    "            else:\n",
+    "                second_operand = int(stack.pop())\n",
+    "                first_operand = int(stack.pop())\n",
+    "                \n",
+    "                if ch == \"+\":\n",
+    "                    result = first_operand + second_operand\n",
+    "                elif ch == \"-\":\n",
+    "                    result = first_operand - second_operand\n",
+    "                elif ch == \"*\":\n",
+    "                    result = first_operand * second_operand\n",
+    "                else:\n",
+    "                    result = first_operand / second_operand\n",
+    "\n",
+    "                stack.append(math.ceil(result) if result < 0 else math.floor(result))\n",
+    "\n",
+    "        return stack[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().evalRPN([\"10\",\"6\",\"9\",\"3\",\"+\",\"-11\",\"*\",\"/\",\"*\",\"17\",\"+\",\"5\",\"+\"]) == 22\n",
+    "assert Solution().evalRPN([\"4\",\"13\",\"5\",\"/\",\"+\"]) == 6\n",
+    "assert Solution().evalRPN([\"2\",\"1\",\"+\",\"3\",\"*\"]) == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31ec23a3",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
