--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![89%](https://progress-bar.dev/89?title=progress&width=100)\n",
+    "![91%](https://progress-bar.dev/91?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -4701,7 +4701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "5617e2c6",
    "metadata": {
     "execution": {
@@ -4764,7 +4764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "id": "11936ee9",
    "metadata": {
     "execution": {
@@ -4926,7 +4926,7 @@
        "5   3.50     4"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5676,9 +5676,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5b21044",
+   "metadata": {},
+   "source": [
+    "# 68. \n",
+    "Date: 31st Jan 2024<br>\n",
+    "Medium Leetcode: minimum-operations-to-make-array-equal<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-operations-to-make-array-equal/submissions/1162184523"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "31ec23a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minOperations_(self, n: int) -> int:\n",
+    "        mid, result = n // 2, 0\n",
+    "        for i in range(mid):\n",
+    "            result += n - (2 * i) - 1\n",
+    "        return result\n",
+    "    \n",
+    "    def minOperations(self, n: int) -> int:\n",
+    "        if n % 2 == 0:\n",
+    "            return (n // 2) ** 2\n",
+    "        else:\n",
+    "            n = (n - 1) // 2\n",
+    "            return (n ** 2) + n\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in range(1, 11):\n",
+    "    assert Solution().minOperations(_) == Solution().minOperations_(_)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31ec23a3",
+   "id": "a7cd140e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5700,7 +5738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
