--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![91%](https://progress-bar.dev/91?title=progress&width=100)\n",
+    "![93%](https://progress-bar.dev/93?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -4701,7 +4701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "id": "5617e2c6",
    "metadata": {
     "execution": {
@@ -4764,7 +4764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "11936ee9",
    "metadata": {
     "execution": {
@@ -4926,7 +4926,7 @@
        "5   3.50     4"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5714,9 +5714,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "891df0fa",
+   "metadata": {},
+   "source": [
+    "# 69. \n",
+    "Date: 01st Feb 2024<br>\n",
+    "Medium Leetcode: divide-array-into-arrays-with-max-difference<br>\n",
+    "Solution: https://leetcode.com/problems/divide-array-into-arrays-with-max-difference/submissions/1162484755"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "446b4dce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def divideArray(self, nums: List[int], k: int) -> List[List[int]]:\n",
+    "        # Sort the array\n",
+    "        nums.sort()\n",
+    "\n",
+    "        result = [[]]\n",
+    "        for n in nums:\n",
+    "            if len(result[-1]) < 3:\n",
+    "                result[-1].append(n)\n",
+    "            else:\n",
+    "                result.append([n])\n",
+    "\n",
+    "        # Check if maxdiff is <= k\n",
+    "        for (n1, n2, n3) in result:\n",
+    "            if abs(n3 - n1) > k or abs(n2 - n1) > k or abs(n3 - n2) > k: \n",
+    "                return []\n",
+    "\n",
+    "        return result\n",
+    "    \n",
+    "# Testing the solution\n",
+    "assert not Solution().divideArray([1,3,4,8,7,9,3,5,1], k=1)\n",
+    "assert Solution().divideArray([1,3,4,8,7,9,3,5,1], k=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b4920c8",
+   "metadata": {},
+   "source": [
+    "# 70. \n",
+    "Date: 01st Feb 2024<br>\n",
+    "Medium Leetcode: construct-binary-tree-from-preorder-and-inorder-traversal<br>\n",
+    "Solution: https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/submissions/1162539377/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "1da5f2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> BinaryTreeNode:\n",
+    "        \"\"\"\n",
+    "        preorder - root, left, right\n",
+    "        inorder - left, root, right\n",
+    "\n",
+    "        From preorder traversal, all nodes n[j] that come after n[i] must either be on the same level or below it\n",
+    "        From inorder traversal, we can learn whether to travel leftwards or rightwards\n",
+    "        \n",
+    "        Worst Time complexity - O(n ^ 2)\n",
+    "        Best Time complexity - O(n log(n))\n",
+    "        \"\"\"\n",
+    "\n",
+    "        def insert(root: BinaryTreeNode, curr: int) -> BinaryTreeNode:\n",
+    "            \"Insert similar to how we would with a BST, except we take hints from dirHint dictionary\"\n",
+    "            if not root:\n",
+    "                root = BinaryTreeNode(curr)\n",
+    "            elif dirHint[curr] < dirHint[root.val]:\n",
+    "                left = insert(root.left, curr)\n",
+    "                root.left = left\n",
+    "            else:\n",
+    "                right = insert(root.right, curr)\n",
+    "                root.right = right\n",
+    "\n",
+    "            return root\n",
+    "\n",
+    "        # Luckily all elements are unique\n",
+    "        dirHint = {n: i for i, n in enumerate(inorder)}\n",
+    "\n",
+    "        root = None\n",
+    "        for curr in preorder:\n",
+    "            root = insert(root, curr)\n",
+    "        \n",
+    "        return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().buildTree([3,9,20,15,7], [9,3,15,20,7]).to_list() == [3, 9, 20, None, None, 15, 7, None, None, None, None]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7cd140e",
+   "id": "4365639d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5738,7 +5848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
