75ML30D - Day 24 - Check In - II

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![93%](https://progress-bar.dev/93?title=progress&width=100)\n",
+    "![95%](https://progress-bar.dev/95?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -5824,9 +5824,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7866b319",
+   "metadata": {},
+   "source": [
+    "# 71. \n",
+    "Date: 01st Feb 2024<br>\n",
+    "Medium Leetcode: minimum-amount-of-time-to-collect-garbage<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-amount-of-time-to-collect-garbage/submissions/1163007448/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "4365639d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def garbageCollection(self, garbage: List[str], travel: List[int]) -> int:\n",
+    "\n",
+    "        # Update travel's first index as 0\n",
+    "        travel = [0, *travel]\n",
+    "        \n",
+    "        # Last house, total garbage\n",
+    "        trucks = {\"G\": (0, 0), \"M\": (0, 0), \"P\": (0, 0)}\n",
+    "        for i, house in enumerate(garbage):\n",
+    "            for g_type in house:\n",
+    "                trucks[g_type] = (i, trucks[g_type][1] + 1)\n",
+    "\n",
+    "        # Compute time for each garbage truck\n",
+    "        result = 0\n",
+    "        for last_idx, acc_garbage in trucks.values():\n",
+    "            result += acc_garbage + sum(travel[:last_idx + 1])\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().garbageCollection([\"MMM\", \"PGM\", \"GP\"], [3, 10]) == 37\n",
+    "assert Solution().garbageCollection([\"G\", \"P\", \"GP\", \"GG\"], [2, 4, 3]) == 21"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4365639d",
+   "id": "cd6c0267",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70baf749",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0712cbb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5848,7 +5906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
