75ML30D - Day 25 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![95%](https://progress-bar.dev/95?title=progress&width=100)\n",
+    "![96%](https://progress-bar.dev/96?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -5866,12 +5866,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a06793b7",
+   "metadata": {},
+   "source": [
+    "# 72. \n",
+    "Date: 02nd Feb 2024<br>\n",
+    "Medium Leetcode: sequential-digits<br>\n",
+    "Solution: https://leetcode.com/problems/sequential-digits/submissions/1163486260"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "cd6c0267",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def sequentialDigits(self, low: int, high: int) -> List[int]:\n",
+    "        nums = \"123456789\"\n",
+    "        result = []\n",
+    "        for window_length in range(2, 10):\n",
+    "            for i in range(10 - window_length):\n",
+    "                curr = int(nums[i: i + window_length])\n",
+    "                if low <= curr <= high:\n",
+    "                    result.append(curr)\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().sequentialDigits(100, 300) == [123, 234]\n",
+    "Solution().sequentialDigits(98, 200) == [123]\n",
+    "Solution().sequentialDigits(int(1e8), int(1e9)) == [123456789]"
+   ]
   },
   {
    "cell_type": "code",
